2010-04-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[test] Test rlog with two (working) filenames.

	* alive.test: Add a simple test with two filenames.

2010-04-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use `fbuf_save' more.

	* rcsfnms.c (bufremember): Use `fbuf_save'.

2010-04-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[test] Test multi-line log messages.

	* alive.test: Make some log messages multi-line.

2010-04-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Ignore `getwd', `getabsname'.

	* base.h (needs_getabsname): Delete #define.
	* rcsfnms.c (getfullRCSname): Remove #if needs_getabsname block.
	Remove preproc cond block that falls back to `getwd'.
	[!HAVE_GETCWD] (getcwd): Simplify surrounding preproc cond.

2010-04-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `same-inode'.

	Here, all .c files have implicit "#include "same-inode.h"".
	* base.h (same_file): Delete macro.
	* ci.c (main): Use `SAME_INODE'.
	* co.c (main): Likewise.
	* rcsclean.c (main): Likewise.
	* rcsedit.c (chnamemod): Likewise.
	* rcsfnms.c (getfullRCSname): Likewise.

2010-04-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Overhaul interrupt handling.

	Here, "I" means "#include "b-isr.h"";
	and "U" means "Use `IGNOREINTS', `RESTOREINTS'";
	and "E (foo)" means "Use `ISR_ENABLE', `ISR_DO (foo)'".
	* b-isr.h: New file.
	* b-isr.c: New file.
	* Makefile.am (libparts_a_SOURCES): Add b-isr.h, b-isr.c.
	* base.h (behavior): Add to this struct member `isr'.
	(catchints, ignoreints, restoreints): Delete func decls.
	[HAVE_MMAP && large_memory && has_NFS && MMAP_SIGNAL]
	(catchmmapints, readAccessFilenameBuffer): Likewise.
	[HAVE_MMAP && large_memory && !(has_NFS && MMAP_SIGNAL)]
	(catchmmapints): Delete macro.
	* ci.c: I.
	(main): U.
	* co.c: I.
	(main): U.
	* rcsedit.c: I.
	(rcswriteopen): U; E (CATCHINTS).
	(dorewrite, donerewrite): U.
	* rcsfnms.c (maketemp): Remove spurious isr-enabling.
	* rcslex.c: I.
	(fd2_RILE): E (CATCHMMAPINTS); use `access_page'.